[package]
name = "rudy"
version = "0.1.1-pre"
authors = ["Aaron DeVore <aaron.devore@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Judy array implementation in pure Rust"
documentation = "https://docs.rs/rudy"
repository = "https://www.github.com/adevore/rudy/"
homepage = "https://www.github.com/adevore/rudy/"
keywords = ["data-structures", "collections", "judy"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
nodrop = "0.1"
num-traits = "0.1"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "hashmap"
harness = false
